# ComfyUI-Kongshan-Nodes

./: .comfyignore  .env.example  .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/api/: __init__.py  gemini_models.py
src/local_groundingdino/models/GroundingDINO/: bertwarper.py
src/nodes/: _image_files_utils.py  _registry.py  antigravity_cli.py  directory_image_selector.py  image_to_white_background.py  invert_mask.py  pipeline.config.json  sam_model_loader.py
src/py/: __init__.py  _cli_file_io_utils.py  _gemini_product_utils.py  _product_background_utils.py  _registry.py  _sam_grounding_dino_utils.py  cli_image_input_files.py  cli_image_output_file.py  draw_size_chart_arrows.py  grounding_dino_detect.py  grounding_dino_model_loader.py  grounding_dino_sam_segment.py  is_mask_empty.py  load_image_with_path.py  products_to_white_background.py  sam_segment_by_boxes.py
src/py/api/: __init__.py  _gemini_product_utils.py  analyze_product.py  design_strategy.py  gemini_generate.py  gemini_models.py  select_reference.py
src/py/cli/: __init__.py  cli_image_input_files.py  cli_image_output_file.py
src/py/local/: __init__.py  _image_files_utils.py  _load_image_utils.py  _product_background_utils.py  apply_mask_background.py  directory_image_selector.py  directory_save_images.py  grounding_dino_sam_segment.py  image_to_transparent_background.py  load_image_with_path.py  products_to_background.py  products_to_transparent_background.py
web/: directory_picker.js  models.js
